# yolo

./: .gitignore  README.md  RaspberryPi5_Setup_RU.md  TRAINING.md  gradle.properties  gradlew  gradlew.bat  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  yolo_ncnn.cpp
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_model_library.xml  activity_settings.xml  item_model_library.xml  sheet_settings.xml
app/src/main/res/mipmap-mdpi/: ic_launcher_round.xml
app/src/main/res/mipmap-xxhdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
desktop/: build.gradle.kts
tools/command-center/: README.md  cc.py
tools/dataset-generator/: README.md  generate_dataset.py  generate_dataset_gui.py
tools/mediapipe-sidecar/: README.md  get_model.py  train_object_detector.py  yolo_mediapipe_sidecar.py  yolo_to_voc.py
tools/nanodet-sidecar/: README.md  check_dataset.py  export_ncnn.py  flight_controller.py  get_model.py  nanodet_ncnn_sidecar.py  train_nanodet.py  train_nanodet_gui.py
tools/picodet-sidecar/: README.md  dataset_to_coco.py  get_model.py  picodet_ncnn_sidecar.py  train_picodet.py
tools/rknn-sidecar/: README.md  get_model.py  yolo_rknn_sidecar.py
tools/yolo-fastestv2-sidecar/: README.md  export_ncnn.py  get_model.py  make_yolofastest_data.py  train_yolofastest.py  yolofastest_ncnn_sidecar.py
(+34 files in other folders)
